# phone-logger

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCS.md  Dockerfile  LICENSE  README.md  Taskfile.yml  build.yaml  config.dev.yaml.example  config.yaml  pyproject.toml  repository.yaml  requirements.txt
.github/workflows/: build.yml  notify-upstream.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-code-quality/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-error-handling-robustness/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  (+5 more)
src/: config.py  main.py
src/adapters/: base.py  mqtt.py
src/api/: app.py  models.py
src/core/: event.py  pbx.py  phone_number.py  pipeline.py  utils.py
src/db/: database.py  schema.sql
src/gui/: routes.py
src/i18n/: __init__.py  translations.py
tests/: conftest.py  test_anonymous_calls.py  test_api.py  test_call_aggregation.py  test_fritz_parser.py  test_idle_notification.py  test_mqtt_output.py  test_msn_resolver.py  test_output_line_state.py  test_pbx.py  test_phone_number.py  test_pipeline_enrichment.py  test_raw_events.py  test_resolver_chain.py
translations/: de.yaml  en.yaml
(+43 files in other folders)
