[project]
name = "phone-logger"
version = "1.0.3"
description = "Phone number resolver with Fritz!Box Callmonitor integration for Home Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.20.0",
    "aiomqtt>=2.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.coverage.run]
omit = ["tests/*"]

